--- a/style.css
+++ b/style.css
@@ -159,6 +159,112 @@ header{
 }
 
 
+/* MODAL CSS----------------------------------------------------------------------------------------*/
+.darkScreen{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
+.modalContainer{
+    background-color: white;
+    width: 80%;
+    height: 90%;
+    margin: 10px auto 0px auto;
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+    border: solid black 5px;
+    box-sizing: border-box;
+}
+
+.modalSide{
+    width: 50%;
+    height: 100%;
+    position: relative;
+    border: solid black 5px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-image: url(img/BackgroundTexture.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#p1Side{
+   background-color: blue; 
+}
+
+#p2Side{
+    background-color: red;
+}
+
+#form{
+    background-color: aquamarine;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+}
+
+#submitButton{
+    z-index: 1;
+    margin-top: -200px;
+    background-color: #FFF500;
+    border: solid black 5px;
+    width: 200px;
+    height: 80px;
+    font-size: 15pt;
+    font-family: 'Inter bold';
+    cursor: pointer;
+}
+
+#submitButton:hover{
+    scale: 1.1;
+}
+
+.messageContainer{
+    position: absolute;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+}
+
+.nameMessage{
+    display: block;
+    z-index: 1;
+    background-color: white;
+    border: solid black 5px;
+    text-align: center;
+    padding: 10px;
+    width: 300px;
+    margin-top: 100px;
+}
+
+/*Input CSS*/
+
+.inputText{
+    width: 300px;
+    height: 50px;
+    border: solid black 3px;
+    padding: 5px;
+    box-sizing: border-box;
+    margin-top: 20px;
+}
+
+.labelForm{
+    font-size: 65pt;
+}
 
 /* ANIMATIONS----------------------------------------------
  *
@@ -168,7 +274,7 @@ header{
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
 
- @-webkit-keyframes slide-right {
+ @keyframes slide-right {
     0% {
       -webkit-transform: translateX(-1000px);
               transform: translateX(-1000px);
@@ -180,7 +286,7 @@ header{
   }
 
 
-  @-webkit-keyframes slide-left {
+  @keyframes slide-left {
     0% {
       -webkit-transform: translateX(1000px);
               transform: translateX(1000px);
@@ -191,7 +297,7 @@ header{
     }
   }
 
-  @-webkit-keyframes slide-leftBoard {
+  @keyframes slide-leftBoard {
     0% {
       -webkit-transform: translateX(0);
               transform: translateX(0);
@@ -202,7 +308,7 @@ header{
     }
   }
 
-  @-webkit-keyframes slide-rightBoard {
+  @keyframes slide-rightBoard {
     0% {
       -webkit-transform: translateX(0);
               transform: translateX(0);
