Checagem de vitória
+ mensagem de vitória

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ header{
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 5px;
+    transition: 1s;
 }
 
 .startBtn{
