--- a/style.css
+++ b/style.css
@@ -58,8 +58,10 @@ header{
 }
 
 #p1, #p2{
-    display: none;
+    visibility: hidden;
 }
+
+
 
 .turnMessage{
     background-color: #FBF8BD;
@@ -70,6 +72,7 @@ header{
     flex-direction: column;
     padding: 10px 40px;
     color: #553535;
+    min-width: 150px;
 }
 
 .turnText{
@@ -126,6 +129,9 @@ header{
     cursor: pointer;
     }
 
+    .imgBoard img{
+        display: none;
+    }
 /*WINNER MESSAGE CSS---------------------------------------------------------------------------*/
 
 .winnerContainer{
