Ajustes Validação (CSS3 e HTML5)

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ header{
 }
 
 .startBtn:hover{
-    scale: 1.1;
+    transform: scale(1.1);
 }
 
 .startBtnText{
@@ -248,7 +248,7 @@ header{
 }
 
 #submitButton:hover{
-    scale: 1.1;
+    transform: scale(1.1);
 }
 
 .messageContainer{
